--- a/login/build.gradle
+++ b/login/build.gradle
@@ -61,6 +61,7 @@ dependencies {
 
 
     implementation project(':common')
+//    implementation project(':app')
 
     implementation 'androidx.core:core-ktx:1.10.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
