--- a/common/build.gradle
+++ b/common/build.gradle
@@ -85,6 +85,10 @@ dependencies {
     //GSON
     implementation 'com.google.code.gson:gson:2.10.1'
 
+    //Firebase auth
+    implementation platform('com.google.firebase:firebase-bom:31.5.0')
+    implementation 'com.google.firebase:firebase-auth-ktx'
+
 }
 
 protobuf {
