--- a/navigation/build.gradle
+++ b/navigation/build.gradle
@@ -1,13 +1,10 @@
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
-    id "com.google.protobuf" version "0.8.17"
-    id 'org.jetbrains.kotlin.plugin.serialization'
-    id 'kotlin-parcelize'
 }
 
 android {
-    namespace 'com.example.common'
+    namespace 'com.example.navigation'
     compileSdk 33
 
     defaultConfig {
@@ -39,72 +36,27 @@ android {
         compose true
     }
     composeOptions {
-        kotlinCompilerExtensionVersion '1.4.2'
+        kotlinCompilerExtensionVersion '1.2.0'
     }
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
-
-
 }
 
 dependencies {
 
-    def nav_version = "2.5.3"
-
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
     implementation 'androidx.activity:activity-compose:1.7.1'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
-    implementation 'androidx.compose.material:material:1.4.2'
+    implementation 'androidx.compose.material:material:1.4.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
-
-    //compose navigation
-    implementation "androidx.navigation:navigation-compose:$nav_version"
-
-    //data store
-    implementation "androidx.datastore:datastore-preferences:1.0.0"
-
-    implementation  "androidx.datastore:datastore:1.0.0"
-    implementation  "com.google.protobuf:protobuf-javalite:3.21.7"
-    api "org.jetbrains.kotlinx:kotlinx-collections-immutable:0.3.5"
-    api "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.2"
-
-    //Firestore
-    implementation 'com.google.firebase:firebase-firestore:24.6.0'
-
-    //GSON
-    implementation 'com.google.code.gson:gson:2.10.1'
-
-    //Firebase auth
-    implementation platform('com.google.firebase:firebase-bom:31.5.0')
-    implementation 'com.google.firebase:firebase-auth-ktx'
-
-}
-
-protobuf {
-    protoc {
-        artifact = "com.google.protobuf:protoc:3.21.7"
-    }
-
-    // Generates the java Protobuf-lite code for the Protobufs in this project. See
-    // https://github.com/google/protobuf-gradle-plugin#customizing-protobuf-compilation
-    // for more information.
-    generateProtoTasks {
-        all().each { task ->
-            task.builtins {
-                java {
-                    option 'lite'
-                }
-            }
-        }
-    }
 }
